--- a/code/Rmarkdown/problem-summary.html
+++ b/code/Rmarkdown/problem-summary.html
@@ -353,22 +353,32 @@ pre code {
 
 <div id="TOC">
 <ul>
-<li><a href="#general-problem">General Problem</a></li>
+<li><a href="#the-data">The Data</a></li>
 <li><a href="#model-without-covariates">Model without covariates</a></li>
 <li><a href="#simple-linear-regression">Simple linear regression</a></li>
 <li><a href="#multiple-linear-regression">Multiple linear regression</a></li>
-<li><a href="#the-lasso">The LASSO</a></li>
-<li><a href="#preselection-of-variables">Preselection of Variables</a></li>
+<li><a href="#shrinkage-mathods">Shrinkage Mathods</a><ul>
+<li><a href="#ridge">Ridge</a></li>
+<li><a href="#lasso">Lasso</a></li>
+<li><a href="#elastic-net">Elastic net</a></li>
+</ul></li>
+<li><a href="#the-lasso">The LASSO</a><ul>
+<li><a href="#remark-on-ridge-vs-lasso">Remark on Ridge vs Lasso</a></li>
+<li><a href="#lasso-general">LASSO general</a></li>
+</ul></li>
+<li><a href="#preselection-of-variablespreconditioning-see-esl-18.6">Preselection of Variables/Preconditioning see ESL 18.6</a></li>
 <li><a href="#model-selection">Model Selection</a></li>
 <li><a href="#timelags">Timelags</a></li>
 <li><a href="#graphical-lasso">Graphical LASSO</a></li>
+<li><a href="#fused-lasso">Fused LASSO</a></li>
 <li><a href="#open">Open</a></li>
-<li><a href="#resources">Resources:</a></li>
+<li><a href="#resources">Resources</a></li>
 </ul>
 </div>
 
-<div id="general-problem" class="section level1">
-<h1>General Problem</h1>
+<div id="the-data" class="section level1">
+<h1>The Data</h1>
+<p>OPEN: Summarise the data here and where they come from Also explain autocorrelation and time structure # General Problem</p>
 <p>In our case we have information about monthly sea surface emperature (SST) and monthly precipitation in the Central Amazonas Basin. From a physics point of view it makes sense that we can make predictions about precipitation based on these SSTs. The question is now how well can we predict precipitation based on the SSTs. Desirably we can not only predict precipitation well, but also identify those regions that give us the most information about future precipitation. So for future predictions it may be enough to only observe these important regions. In the following we will describe this problem from a regression perspective where we start with no covariates, then discuss the single and multiple covariate regression problem. We will see that for our problem a “normal” multiple regression model is not usable at least not with all the data at hand.</p>
 </div>
 <div id="model-without-covariates" class="section level1">
@@ -439,6 +449,26 @@ pre code {
 <p>and <span class="math inline">\(\hat{se}^2(\hat{\beta_j})\)</span> is the <span class="math inline">\(j^{th}\)</span> diagonal element of the matrix <span class="math inline">\(\hat{\sigma}^2(X^TX)^{-1}\)</span>.</p>
 <p>Anyway we have to stop here, because in our case the above estimation equations can not be used since our data data matrix <span class="math inline">\(X^TX\)</span> is not invertible. <span class="math inline">\(X\)</span> is <span class="math inline">\(n x p\)</span>, and p &gt; n, therefore fat and</p>
 <p><span class="math display">\[rank(x) = rank(X^TX) \leq n &lt; p \]</span> So <span class="math inline">\(X^TX\)</span> does not have full rank and is not invertible.</p>
+<p>Comment: We could still use pseudo inverse to find the best solution. Bu the solution would have a large condition number meaning that small changes in the entries of the data can lead to large changes in the solution, clearly not desirable</p>
+</div>
+<div id="shrinkage-mathods" class="section level1">
+<h1>Shrinkage Mathods</h1>
+<p>Subset selection is interpretable, lower prediction error than full model but it is discrete process therefore high variance and doesnt reduce prediction error. shrinkage models are more continuos and dont suffer so much from high variability.</p>
+<div id="ridge" class="section level2">
+<h2>Ridge</h2>
+<p>SEE ESL, p.82 pdf Ridge shrinks regression coefficients by adding a penalty on their size.</p>
+<p>OPEN: Use mathipix here for Ridge formulas.</p>
+<p><span class="math inline">\(\alpha\)</span> is complexity parameter controlling amount of penalty/shrinkage. Coefficients are shrunk towards each other and zero. In general, in linear regression model, with many correlated variables they are poorly determined and suffer from high variance. Size constraint as seen above can help with this problem. Not equivariant under scaling, so standardize before. Estimate intercept as average and then use centered inputs. Therefore input matrix has p columns (intercept already dropped). In matrix notation can be seen that ridge regression solution adds positive constant to diag in <span class="math inline">\(X^TX\)</span> therefore even originally singular problems become singular even when <span class="math inline">\(X\)</span> has not full rank. If inputs are orthonormal ridge only rescales least squares estimates. SKIP: bayesian interpretation, but. ridge estimate is the mode of posterior distribution. distribution is gaussian, therefore also posterior mean. <em>Singular value decomposition</em> perspective: Ridge regression shrinks according to size of eigenvalues of respective eigenvectors. Along those eigenvectors that explain less variance (smaller eigenvalue) the shrinkage is stronger. Those directions with higher explanatory power are preserved. see <em>eigen decompostion</em>, eigenvectors are called principal components. <em>Implicit assumption</em>: response will vary with most directions of high variance of inputs. reasonable assumption often but does not need to hold in general.</p>
+</div>
+<div id="lasso" class="section level2">
+<h2>Lasso</h2>
+<p>Shrinkage method like ridge but difference is l1 norm. No closed expression as in ridge. Lasso does continous subset selection. If parametrization is done according to <span class="math inline">\(t_0\)</span>/2 (<span class="math inline">\(t_0\)</span> sum of magnitude of least squares estimates) the least squares are shrunk by about 50% on average.</p>
+</div>
+<div id="elastic-net" class="section level2">
+<h2>Elastic net</h2>
+<p>Compromise between ridge and lasso. Selects variables like lasso, shrinks together coefficients of correlated predictors like ridge, also computationally advantages.</p>
+<p>OPEN: Least Angle, Partial Least Squares, grouped lasso, OPEN: multiple outcomes, may be interesting for the different regions.</p>
+</div>
 </div>
 <div id="the-lasso" class="section level1">
 <h1>The LASSO</h1>
@@ -446,9 +476,17 @@ pre code {
 <p>In general for the linear model:</p>
 <p><span class="math display">\[y_i = \beta_0 + \pmb{x}_i^T\pmb{\beta} + \epsilon_i  \]</span> Where the <span class="math inline">\(Y_i\)</span> refers to the mean precipitation for a given month <span class="math inline">\(i\)</span> and <span class="math inline">\(x_i\)</span> is the vector of sea surface temperature at different locations around the globe. <span class="math inline">\(\epsilon_i\)</span> is the residual and we wish to estimate the <span class="math inline">\(\beta\)</span>´s from the data. As already stated this is not possible with a classic linear model since the number of predictors exceeds the number of observations. We therefore can not estimate a <span class="math inline">\(\beta\)</span> for every grid point in the sea. From a physical point of view it also seems reasonable that some regions in the ocean have a higher predictive power than others. For example regions that are closer to the Amazonas may have more influence on precipitation in the same month. But regions more far away may have more information on the precipitation half a year in the future. We therefore would like to use a model that can find the most important regions in the sea for predicting precipitation for some point in the future. One possible solution for this is a LASSO or elastic net regression model, as implemented in R by the glmnet package. This model “automatically” performs model selection, but be aware that because of the time dependencies in our data, normal Cross Validation methods may be unjustified or at least have to be applied with caution. The glmnet package implements the regression problem in the following manner, solving:</p>
 <p><span class="math display">\[\min_{\beta_0, \beta} \frac{1}{N} \sum_{i=1}^N w_il(y_i,\beta_0 + \beta^Tx_i) + \lambda [(1-\alpha)||\beta||_2^2/2 + \alpha||\beta||_1] \]</span> This is a lasso regression for <span class="math inline">\(\alpha = 1\)</span> and ridge regression for <span class="math inline">\(\alpha = 0\)</span>, <span class="math inline">\(\alpha\)</span> controls the overall strength of regularization or penalty. Intuitively this means we try to find those <span class="math inline">\(\beta\)</span>´s that minimise the negative log likelihood of our data (this is equal to maximizing the log-likelihood). But at the same time we can not include too many <span class="math inline">\(\beta\)</span> since this will make the second and third term in the formula grow. As result the algorithm chooses only those predictors that have the most predictive power. How many predictors are included depends on the strength of regularization given by <span class="math inline">\(\alpha\)</span> <em>Remark</em>: Among strongly correlated predictors only one is chosen in the classical lasso model. Ridge regression shrinks the coefficients to zero. Elastic net with <span class="math inline">\(\alpha=0.5\)</span> tends to either include or drop the entire group together. To specifically choose a group of predictors, variations of the lasso or other models have to be considered.</p>
+<div id="remark-on-ridge-vs-lasso" class="section level2">
+<h2>Remark on Ridge vs Lasso</h2>
+<p>Both settings work in n&gt;p because eigenvalues are added to diagonal making the modified cov matrix invertable .</p>
 </div>
-<div id="preselection-of-variables" class="section level1">
-<h1>Preselection of Variables</h1>
+<div id="lasso-general" class="section level2">
+<h2>LASSO general</h2>
+<p>ESL p.64 (83 in pdf) Subset selection is interpretable, lower prediction error than full model but it is discrete process therefore high variance and doesnt reduce prediction error. shrinkage models are more continuos and dont suffer so much from high variability LASSO minimizes penalized residual sum of squares.</p>
+</div>
+</div>
+<div id="preselection-of-variablespreconditioning-see-esl-18.6" class="section level1">
+<h1>Preselection of Variables/Preconditioning see ESL 18.6</h1>
 <p>Before fitting an actual model we can compute crude correlation values between precipitation and each sea grid point. We can thereby identify regions that are more strongly correlated with the precipitation than others. We might “preselect” regions and hence possible predictors by using only a certain amount of those strongly correlated sea regions. One possibility here would be to include the 5% percent of regions that are most correlated with precipitation. Here we can use quantiles as threshold values. <em>Question</em>: Do we choose them symmetrically? (0.25 and 97.5 as cutoff values or does this also depend on the number of values included on each side?) Another possibility here is to analyse the correlation among the sea regions themselves, group together points as one single region and average the values of these regions. This can be seen or be applied as a form clustering to group variables together and start with a smaller number of predictors before applying the regression model itself. <em>Remark</em>: However this preselection is done, it makes sense to include it in the model selection process because this procedure is too a part of the algorithm and needs to be considered.</p>
 </div>
 <div id="model-selection" class="section level1">
@@ -463,13 +501,29 @@ pre code {
 <h1>Graphical LASSO</h1>
 <p>Network approach to the regularised (grouped) prediction problem.</p>
 </div>
+<div id="fused-lasso" class="section level1">
+<h1>Fused LASSO</h1>
+<p>Group Lasso for structurally grouped features. Fused Laso structural grouping arises from underlying index set such as time or for our case location (SL with spars) See Paper send by Fabi &quot;&quot;</p>
+</div>
 <div id="open" class="section level1">
 <h1>Open</h1>
-<p>General assumptions of linear models General assumptions LASSO Check clean, unified notation Definition unbiased Q: intuition behind estimated <span class="math inline">\(\beta_1\)</span>, denominator looks like covariance Q: do we say when the conditional expectation is 0 and conditional variance is sigma, that they are independent? Q: how do we formalise the conditional independence of the <span class="math inline">\(y_i\)</span>´s given <span class="math inline">\(x\)</span>? Q: Expected value is minimising mean squared error but we use sum of sqaured errors, Expectation minimises both? Q: Least squares fitting is reasonable if trainig observations are independent random draws from population, even if not random still valid, if y_i conditionally independent given input xi. Q: Does that mean for example after accounting for confounders the y_i are cond independent? <em>Remark</em>: RSS makes no assumption about validity of model. If we can predict well, we say model is good enough.</p>
+<p>General assumptions of linear models<br />
+General assumptions LASSO<br />
+Check clean, unified notation<br />
+Definition unbiased<br />
+Q: Intuition behind estimated <span class="math inline">\(\beta_1\)</span>, denominator looks like covariance<br />
+Q: do we say when the conditional expectation is 0 and conditional variance is sigma, that they are independent?<br />
+Q: how do we formalise the conditional independence of the <span class="math inline">\(y_i\)</span>´s given <span class="math inline">\(x\)</span>?<br />
+Q:Expected value is minimising mean squared error but we use sum of sqaured errors, Expectation minimises both?<br />
+Q: Least squares fitting is reasoable if trainig observations are independent random draws from population, even if not random still valid, if y_i conditionally independent given input xi.<br />
+Q: Does that mean for example after accounting for confounders the y_i are cond independent?<br />
+<em>Remark</em>: RSS makes no assumption about validity of model. If we can predict well, we say model is good enough. Checkout: Non-negative Garotte Q: What are the requirements for 1,0? How do you meaure/ which criteria are used? Relevant: <a href="https://journals.ametsoc.org/view/journals/clim/aop/jcliD200079/jcliD200079.xml" class="uri">https://journals.ametsoc.org/view/journals/clim/aop/jcliD200079/jcliD200079.xml</a></p>
 </div>
 <div id="resources" class="section level1">
-<h1>Resources:</h1>
-<p>All of statistics Linear and Logistic Regression ESL Linear Methods for Regression <a href="https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf" class="uri">https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf</a> <a href="https://www.math.arizona.edu/~tgk/464_07/cond_exp.pdf" class="uri">https://www.math.arizona.edu/~tgk/464_07/cond_exp.pdf</a></p>
+<h1>Resources</h1>
+<p>All of statistics<br />
+ESL<br />
+<a href="https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf" class="uri">https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf</a> <a href="https://www.math.arizona.edu/~tgk/464_07/cond_exp.pdf" class="uri">https://www.math.arizona.edu/~tgk/464_07/cond_exp.pdf</a></p>
 </div>
 
 
